--- a/styles.css
+++ b/styles.css
@@ -32,3 +32,16 @@
   font-weight: 600;
   font-style: normal;
 }
+
+::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(0, 0, 0, 0.3);
+  border-radius: 30px;
+}
