--- a/styles.css
+++ b/styles.css
@@ -33,8 +33,13 @@
   font-style: normal;
 }
 
+body {
+  scrollbar-gutter: stable;
+}
+
 ::-webkit-scrollbar {
-  width: 0.5rem;
+  width: 0.3rem;
+  scroll-behavior: smooth;
 }
 
 ::-webkit-scrollbar-track {
@@ -42,6 +47,6 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(0, 0, 0, 0.6);
   border-radius: 30px;
 }
